syntax = "proto3";

package digimon;

option go_package = "grpc-server/proto";

message IdRequest {
    int32 id = 1;
}

message AtributoResponse {
    string atributo = 1;
}

service InfoService {
    rpc MandarInfo (InfoNode) returns (Response);
    rpc ObtenerInfo (IdRequest) returns (AtributoResponse);
}

message InfoNode {
    int32 id = 1;
    string atributo = 2;
}

message Empty {}

message Response {
    string message = 1;
}
